fix: carousel non visible

--- a/src/client/components/features/Logement/Consulter/ConsulterAnnonce.module.scss
+++ b/src/client/components/features/Logement/Consulter/ConsulterAnnonce.module.scss
@@ -266,6 +266,8 @@
       margin: auto;
       object-fit: cover;
       object-position: center;
+      width: auto;
+      height: 100%;
     }
 
     button {
