--- a/src/client/components/ui/Carousel/Carousel.module.scss
+++ b/src/client/components/ui/Carousel/Carousel.module.scss
@@ -4,5 +4,13 @@
   position: relative;
   overflow: hidden;
   width: 100%;
+  height: 25rem;
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+  }
 }
 
